--- a/.gitignore
+++ b/.gitignore
@@ -3,12 +3,23 @@ __pycache__/
 *.py[cod]
 *$py.class
 *.so
-*.egg
-*.egg-info/
-dist/
-build/
-*.whl
 .Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
 # Virtual environments
 venv/
@@ -16,67 +27,52 @@ env/
 ENV/
 .venv
 
-# Jupyter Notebook
-.ipynb_checkpoints
-*.ipynb
-
 # IDEs
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
+.DS_Store
 
-# ROS2
-install/
-build/
-log/
-*.db3
-*.db3-shm
-*.db3-wal
+# Jupyter Notebook
+.ipynb_checkpoints
 
-# Data files (too large for git)
-data/raw/*.bag
+# Data files (too large for Git)
 data/raw/**/*.db3
-data/processed/*.csv
+data/raw/**/*.bag
 *.bag
-*.mcap
 
-# Results and outputs (generated)
-results/
-visualizations/
-*.png
-*.jpg
-*.jpeg
-*.gif
-*.pdf
+# ML models (too large)
+ml/models/*.pth
+ml/models/*.pkl
+ml/models/*.pt
 
-# Keep example results in docs
-!docs/images/*.png
-!docs/images/*.jpg
-!docs/examples/*.png
+# Generated results
+ekf_localization/results/*.png
+ekf_localization/results/*.csv
+ml/results/*.png
+ml/results/*.csv
+comparison_results/
 
-# Model files (too large)
-*.pth
-*.pkl
-*.h5
-*.onnx
-models/
+# Logs
+*.log
+
+# OS
+Thumbs.db
+.DS_Store
 
 # Temporary files
 *.tmp
 *.bak
-*.log
-*.cache
+*.swp
+.~*
 
-# OS
-.DS_Store
-Thumbs.db
+# ROS
+install/
+log/
+build/
 
-# Configuration (keep templates, ignore local configs)
-config/local_*.yaml
-config/*_local.yaml
-
-# Validation reports (generated)
-config/validation_report.yaml
-
+# Config overrides (keep defaults only)
+config/local.yaml
+config/override.yaml
